--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,3 @@
-BACKEND_URL="http://localhost:8000"
+VITE_BACKEND_URL="http://localhost:8000"
+VITE_BASE_URL="http://localhost:5173"
+VITE_secret=8gBm/:&EnhH.1/q
