--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,17 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
+    "crypto-js": "^4.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-paginate": "^8.3.0",
     "react-router-dom": "^7.6.0",
+    "react-slugify": "^4.0.1",
+    "react-top-loading-bar": "^3.0.2",
     "swiper": "^11.2.7",
-    "tailwindcss": "^4.1.7"
+    "tailwindcss": "^4.1.7",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
